<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/weather_fragment_srollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/weather_condition_thumb"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="6dp"
                    android:background="@android:color/darker_gray"
                    android:contentDescription="@string/weather_condition_description"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <ImageView
                        android:id="@+id/page_back"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/bluelight"
                        android:contentDescription="@string/weather_debug_misc"
                        android:cropToPadding="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_menu_back" />

                    <ImageView
                        android:id="@+id/page_forward"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/bluelight"
                        android:contentDescription="@string/weather_debug_misc"
                        android:cropToPadding="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_menu_forward" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/weather_swipe"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/orangelight"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <!-- FORECAST TITLE -->

                <TextView
                    android:id="@+id/weather_view_day"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weather_debug_short" />
                <!-- High: 70 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="High:"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weather_view_high"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:gravity="right"
                        android:text="70°"
                        android:textColor="@color/orangedark"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Low: 40 -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Low:"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weather_view_low"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="40°"
                        android:textColor="@color/bluelight"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Wind: 12 mph -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Wind:"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weather_view_wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="12 mph"
                        android:textColor="@color/greenlight"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- Humidity: 12 mph -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="Humidity:"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/weather_view_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="40%"
                        android:textColor="@color/bluedark"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- SUMMARY LABEL -->

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/weather_text_summary" />

            <TextView
                android:id="@+id/weather_view_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Summary of info"
                android:textColor="@color/greenlight"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="View Radar" />

            <Button
                android:id="@+id/weather_button_nws"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="National Weather Service" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>